answer and complete pages html

--- a/answer.html
+++ b/answer.html
@@ -7,6 +7,30 @@
     <title>Quiz App Answer Template</title>
 </head>
 <body>
+        <h1>Quiz App</h1>
+        <div class="answer">
+            <ul>
+                <li>Question: <span class="qNum">1</span>/5</li>
+                <li>Score: <span class="score">0</span></li>
+            </ul>
+        </div>
+        <div>
+            <h2>Yay || Yuck</h2>
+            <p>This was the question</p>
+            <ul>
+                <li>Your answer<span class="user-answers">BLAH</span></li>
+                <li>Correct answer <span class="correct-answere">BLEH</span></li>
+            </ul>
+        </div>
+        <div>
+            <button type="submit">Next</button>
+        </div>
+    </header>
+    <main role="main">
+        <div class="question">
+            
+        </div>
+    </main>
     
 </body>
 </html>
