--- a/complete.html
+++ b/complete.html
@@ -7,6 +7,12 @@
     <title>Quiz App Results Page Template</title>
 </head>
 <body>
-    
+    <h1>Quiz App</h1>
+        <main role="main">
+        <div class="endQuiz">
+            <p>This is how well you did in the quiz.</p>
+                <button type="submit" class="startBtn">Replay!</button>
+        </div>
+    </main>
 </body>
 </html>
