--- a/question.html
+++ b/question.html
@@ -18,7 +18,25 @@
     </header>
     <main role="main">
         <div class="question">
-            
+            <h2>This is the question. What is the answer?</h2>
+            <form>
+                <label class="option">
+                    <input type="radio" value="Answer 1" name="answer" required>
+                    <span>Answer 1</span>
+                </label>
+                <br>
+                <label class="option">
+                    <input type="radio" value="Answer 2" name="answer" required>
+                    <span>Answer 2</span>
+                </label>
+                <br>
+                <label class="option">
+                    <input type="radio" value="Answer 3" name="answer" required>
+                    <span>Answer 3</span>
+                </label>
+                <br>
+                <button type="submit" class="submitAnswer">Submit</button>
+            </form>
         </div>
     </main>
 </body>
