lots of js done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p>This is a description of what the quiz will be about.</p>
             <button type="submit" class="startBtn">Start!</button>
         </div>
+        <div class="answerForm"></div>
     </main>
 </body>
 </html>
