forgot to push index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>This is a description of what the quiz will be about.</p>
             <button type="submit" class="startBtn">Start!</button>
         </div>
-        <div class="answerForm"></div>
+        <div class="quizStage"></div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "index.js"></script>
