--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <title>Quiz App Home</title>
 </head>
-<body>
+<body class="container">
     <header role="heading">
         <h1>Quiz App</h1>
     </header>
-    <main role="main">
+    <main class="main" role="main">
         <div class="startQuiz">
             <p>This is a description of what the quiz will be about.</p>
-            <button type="submit" class="startBtn">Start!</button>
+            <button type="submit" class="button startBtn">Start!</button>
         </div>
         <div class="quizStage"></div>
     </main>
