All styling complete, app fully functioning

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     </head>
     <body class="container">
         <header role="heading">
-            <h1>Quiz App</h1>
+            <h1>Dachshund Quiz App</h1>
         </header>
         <main class="main" role="main">
             <div class="startQuiz">
-                <p>This is a description of what the quiz will be about.</p>
-                <button type="submit" class="button startBtn">Start!</button>
+                <br>
+                <h2>How well do you think you know dachshunds? Let's find out!</h2>
+                <button type="submit" class="button startBtn">Start Quiz!</button>
             </div>
             <div class="quizStage"></div>
         </main>
